--- a/Html/index.html
+++ b/Html/index.html
@@ -3,29 +3,47 @@
 <html>
 
 <head>
-
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../Css/style.css">
-
   <title>Website</title>
-
 </head>
 
 <body>
 
-  <nav class="navigation">
+  <header>
+    <nav class="navigation">
+      <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Products</a>
+            <ul class="dropdown">
+              <li><a href="#">Rhoncusa</a></li>
+              <li><a href="#">Vehicula</a></li>
+            </ul>    
+          </li>
+      </ul>
+    </nav>
+  </header>
 
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Products</a>
-          <ul class="dropdown">
-            <li><a href="#">Pindakaas 100%</a></li>
-            <li><a href="#">Pindakaas Royale</a></li>
-          </ul>    
-        </li>
-    </ul>
-  </nav>
+  <section id="banner">
+    <div class="inner">
+      <h3>Tortor dapibus sollicitudin</h3> 
+      <h3>Vel dictum massa</h3> 
+    </div>
+  </section>
+
+  <section>
+    <div class="inner">
+      <header>
+        <h3>Magna Etiam Lorem</h3> <br>
+      </header>
+      <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus mollis nibh id ipsum sodales, elementum pharetra diam venenatis. Morbi massa ligula, auctor at lacinia sed, egestas eu lacus. Praesent vehicula neque id ullamcorper aliquet. Maecenas interdum quam iaculis tortor dapibus sollicitudin. Nullam interdum odio et diam ullamcorper, non finibus nisi fermentum. In laoreet, purus accumsan elementum auctor, quam velit tincidunt nulla, quis pretium est nisl vitae lorem. Maecenas ullamcorper ex mi, vel dictum massa ullamcorper quis. Nam nec ultricies risus. Phasellus lobortis velit leo, non feugiat ligula finibus in.</p>
+    </div>
+  </section>
+
+  <footer>
+    <a href="">&copy; Design naam: Link</a>
+  </footer>
 
 </body>
 
