--- a/Html/index.html
+++ b/Html/index.html
@@ -13,12 +13,13 @@
   <header>
     <nav class="navigation">
       <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Products</a>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="page2.html">About us</a></li>
+          <li><a href="page3.html">Sign up</a>
+          <li><a href="page4.html">Topics</a>
             <ul class="dropdown">
-              <li><a href="#">Rhoncusa</a></li>
-              <li><a href="#">Vehicula</a></li>
+              <li><a href="page5.html">Vehicula</a></li>
+              <li><a href="page6.html">Rhoncusa</a></li>
             </ul>    
           </li>
       </ul>
@@ -42,7 +43,7 @@
   </section>
 
   <footer>
-    <a href="">&copy; Design naam: Link</a>
+    <a href="index.html">&copy; Design naam: Link</a>
   </footer>
 
 </body>
