--- a/Html/page2.html
+++ b/Html/page2.html
@@ -3,21 +3,83 @@
 <html>
 
 <head>
-
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../Css/style.css">
-
   <title>Website</title>
-
 </head>
 
 <body>
 
-  <p>This is page 2</p> 
+  <header>
+    <nav class="navigation">
+      <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="page2.html">About us</a></li>
+          <li><a href="page3.html">Sign up</a>
+          <li><a href="page4.html">Topics</a>
+            <ul class="dropdown">
+              <li><a href="page5.html">Vehicula</a></li>
+              <li><a href="page6.html">Rhoncusa</a></li>
+            </ul>    
+          </li>
+      </ul>
+    </nav>
+  </header>
 
-  <a href="index.html">Page 1</a>
-  <a href="page3.html">Page 3</a>
-  <a href="page4.html">Page 4</a>
-  <a href="page5.html">Page 5</a>
+  <section>
+    <div class="inner">
+      <header>
+        <h3>Elementum pharetra</h3> <br>
+      </header>
+      <p>Ipsum primis malesuada fames ac ante ipsum primis in faucibus. Vivamus mollis nibh id ipsum sodales, elementum pharetra diam venenatis. Morbi massa ligula, auctor at lacinia sed, egestas eu lacus. Praesent vehicula neque id ullamcorper aliquet. Maecenas interdum quam iaculis tortor dapibus sollicitudin. Nullam interdum odio et diam ullamcorper, non finibus nisi fermentum. In laoreet, purus accumsan elementum auctor, quam velit tincidunt nulla, quis pretium est nisl vitae lorem. Maecenas ullamcorper ex mi, vel dictum massa ullamcorper quis. Nam nec ultricies risus. Phasellus lobortis velit leo, non feugiat ligula finibus in.</p><br>
+      <p>elementum pharetra diam venenatis. Morbi massa ligula, auctor at lacinia sed, egest, elementum pharetra diam venenatis. Morbi massa ligula, auctor at lacinia sed, egestas eu lacus. Praesent vehicula neque id ullamcorper aliquet. Maecenas interdum quam iaculis tortor dapibus sollicitudin. Nullam interdum odio et diam ullamcorper, non finibus nisi fermentum. In laoreet, purus accumsan elementum auctor, quam velit tincidunt nulla, quis pretium est nisl vitae lorem. Maecenas ullamcorper ex mi, vel dictum massa ullamcorper quis. Nam nec ultricies risus. Phasellus lobortis velit leo, non feugiat ligula finibus in.</p>
+    </div>
+  </section>
+
+  <section id="threesplit">
+    <div class="inner">
+      <article>
+          <header>
+            <h3>Vestibulum congue</h3><br>
+          </header>
+          <p>Sit amet maximus dolor nisl nec tellus. Nulla finibus, sapien sit amet varius elementum, diam risus laoreet justo, molestie tempus diam libero id lectus.</p><br>
+          <ul>
+            <li><a href="#" class="link">Learn More</a></li>
+          </ul>
+      </article>
+      <article>
+          <header>
+            <h3>Malesuada lacus</h3><br>
+          </header>
+          <p>Nam aliquet enim et elementum blandit. Maecenas vestibulum interdum ultricies. Maecenas vitae turpis eget odio rutrum rhoncus. Nulla ac elit risus.</p><br>
+          <ul>
+            <li><a href="#" class="link">Learn More</a></li>
+          </ul>
+      </article>
+      <article>
+          <header>
+            <h3>Semper mattis</h3><br>
+          </header>
+          <p>Maecenas sodales eros blandit sem vestibulum congue. Suspendisse in malesuada lacus. Proin semper mattis purus, eget dictum ipsum semper a.</p><br>
+          <ul>
+            <li><a href="#" class="link">Learn More</a></li>
+          </ul>
+      </article>
+    </div>
+  </section>
+
+  <section>
+    <div class="inner">
+      <header>
+        <h3>Lacinia sed</h3> <br>
+      </header>
+      <p>Phasellus lobortis velit leo, non feugiat ligula finibus in. Elementum pharetra diam venenatis. Morbi massa ligula, auctor at lacinia sed, egestas eu lacus. Praesent vehicula neque id ullamcorper aliquet. Maecenas interdum quam iaculis tortor dapibus sollicitudin. Nullam interdum odio et diam ullamcorper, non finibus nisi fermentum. In laoreet, purus accumsan elementum auctor, quam velit tincidunt nulla, quis pretium est nisl vitae lorem. Maecenas ullamcorper ex mi, vel dictum massa ullamcorper quis. Nam nec ultricies risus. Phasellus lobortis velit leo, non feugiat ligula finibus in.</p><br>
+    </div>
+  </section>
+
+  <footer>
+    <a href="">&copy; Design naam: Link</a>
+  </footer>
 
 </body>
 
